--- a/templates/index.html
+++ b/templates/index.html
@@ -9,58 +9,71 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/pico.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/output.css')}}">
 
+    <link rel="icon" href="{{url_for('static', filename='src/home.ico')}}">
+
     {{ fontawesome_html() }}
 </head>
 
 <body data-theme="dark">
 
-    <!-- Enter a gallery input -->
-    <div class="container mx-auto py-4">
-        <h2 class="text-2xl font-bold text-white m-1">Enter a gallery</h2>
+    <div class="container px-8">
 
-        <form id="enter-form">
-            <div class="flex flex-row">
-                <input type="text" class="w-10/12 rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
-                    placeholder="Enter a Discord channel ID" id="channel-input">
-
-                <button class="w-1/6 rounded-lg shadow-md bg-gray-800 text-white mt-3 ml-2"
-                    id="enter-gallery">Enter</button>
+        <!-- Discord Bot invite -->
+        <a href="https://discord.com/api/oauth2/authorize?client_id=1136039549894676490&permissions=124928&scope=bot"
+            class=" rounded-lg shadow-md text-white">
+            <div class="container mx-auto py-2 my-2 items-center justify-center self-center text-center"
+                title="Invite GalleryView bot">
+                <img src="{{url_for('static', filename='src/discord.png')}}" class="inline-block h-10 w-10 mr-2">
             </div>
-        </form>
+        </a>
 
-    </div>
+        <!-- Enter a gallery -->
+        <div class="container mx-auto py-4">
+            <h2 class="text-2xl font-bold text-white m-1">Enter a gallery</h2>
 
-    <!-- Create gallery (through Discord token  and channel id)-->
-    <div class="container mx-auto py-4">
-        <h2 class="text-2xl font-bold text-white m-1">Create a gallery</h2>
+            <form id="enter-form">
+                <div class="flex flex-row">
+                    <input type="text" class="w-10/12 rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
+                        placeholder="Enter a Discord channel ID" id="channel-input">
 
-        <!-- Warning about using Discord token to scrap messages-->
-        <div class="flex flex-row bg-gray-800 text-white p-2 my-3 mr-x justify-center items-center border-red-500 border-2 rounded-lg"
-            title="This method to create a gallery uses your Discord token to scrap messages in the specified channel, which is against Discord TOS, the scrapper is tested and as long as you use realtively small number as 100 you should be fine. Use at your own risk.">
-            <i class="fas fa-exclamation-triangle text-red-500 m-2"></i>
-            <p class="text-sm">Warning: Using a Discord token to scrap messages is against the Discord ToS. Use at
-                your own risk.</p>
+                    <button class="w-1/6 rounded-lg shadow-md bg-gray-800 text-white mt-3 ml-2"
+                        id="enter-gallery">Enter</button>
+                </div>
+            </form>
+
         </div>
 
-        <form id="creation-form">
-            <input type="text" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
-                placeholder="Enter a Discord token" id="creation-token-input">
+        <!-- Create gallery -->
+        <div class="container mx-auto py-4">
+            <h2 class="text-2xl font-bold text-white m-1">Create a gallery</h2>
 
-            <div class="flex flex-row">
-                <input type="text" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
-                    placeholder="Enter a Discord channel ID" id="creation-channel-input">
-
-                <input type="number" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
-                    placeholder="Number of images" id="creation-amount-input" value="100">
+            <!-- Warning about using Discord token to scrap messages-->
+            <div class="flex flex-row bg-gray-800 text-white p-2 my-3 mr-x justify-center items-center border-red-500 border-2 rounded-lg"
+                title="This method to create a gallery uses your Discord token to scrap messages in the specified channel, which is against Discord TOS, the scrapper is tested and as long as you use realtively small number as 100 you should be fine. Use at your own risk.">
+                <i class="fas fa-exclamation-triangle text-red-500 m-2"></i>
+                <p class="text-sm">Warning: Using a Discord token to scrap messages is against the Discord ToS. Use at
+                    your own risk.</p>
             </div>
 
-            <button class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3"
-                id="create-gallery">Create</button>
+            <form id="creation-form">
+                <input type="text" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
+                    placeholder="Enter a Discord token" id="creation-token-input">
 
-        </form>
+                <div class="flex flex-row">
+                    <input type="text" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
+                        placeholder="Enter a Discord channel ID" id="creation-channel-input">
 
+                    <input type="number" class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3 mr-2"
+                        placeholder="Number of images" id="creation-amount-input" value="100">
+                </div>
+
+                <button class="w-full rounded-lg shadow-md bg-gray-800 text-white p-2 mt-3"
+                    id="create-gallery">Create</button>
+
+            </form>
+
+        </div>
     </div>
-
 
     <script>
 
@@ -73,13 +86,13 @@
         function enter_gallery() {
             // if gallery exists, if will be at /gallery/<channel_id> so we can just redirect to that
             var channel_id = document.getElementById("channel-input").value;
-            
+
             // check if gallery exists by making a request
             var xhr = new XMLHttpRequest();
             xhr.open("GET", "/gallery/" + channel_id, true);
             xhr.send();
 
-            
+
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4) {
                     if (xhr.status === 200) {
@@ -87,7 +100,7 @@
                         window.location.href = "/gallery/" + channel_id;
                     } else {
                         // error
-                        console.log(xhr.responseText);
+                        alert("Gallery does not exist");
                     }
                 }
             }
@@ -106,9 +119,6 @@
             var channel_id = document.getElementById("creation-channel-input").value;
             var amount = document.getElementById("amount-input").value;
 
-
-            console.log(token, channel_id, amount);
-
             // make request to create gallery
             var xhr = new XMLHttpRequest();
             xhr.open("POST", "/api/create_gallery_scrapping", true);
@@ -124,11 +134,10 @@
                     if (xhr.status === 200) {
                         // success
                         var response = JSON.parse(xhr.responseText);
-                        console.log(response);
                         window.location.href = response.gallery_url;
                     } else {
                         // error
-                        console.log(xhr.responseText);
+                        alert("Error while creating gallery");
                     }
                 }
             }
