HotFix vairable name breaks form
Wrong variable name

--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
         function create_gallery() {
             var token = document.getElementById("creation-token-input").value;
             var channel_id = document.getElementById("creation-channel-input").value;
-            var amount = document.getElementById("amount-input").value;
+            var amount = document.getElementById("creation-amount-input").value;
 
             // make request to create gallery
             var xhr = new XMLHttpRequest();
