--- a/static/css/pico.css
+++ b/static/css/pico.css
@@ -1,3 +1,5 @@
+
+
 @charset "UTF-8";
 /*!
  * Pico.css v1.5.3 (https://picocss.com)
@@ -6,6 +8,24 @@
 /**
  * Theme: dark
  */
+
+
+/* Center the modal content */
+#modalContent {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Blur the background when the modal is open */
+body.modal-open {
+  overflow: hidden;
+}
+
+#imageModal {
+  z-index: 9999;
+}
+
 :root {
   --font-family: system-ui, -apple-system, "Segoe UI", "Roboto", "Ubuntu",
     "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
