--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -18,10 +18,12 @@
 <body data-theme="dark">
     <script src="{{url_for('static', filename='js/utils.js')}}"></script>
     <script src="{{url_for('static', filename='js/modal.js')}}"></script>
-    <script src="{{url_for('static', filename='js/grid_mode.js')}}"></script>
+    <script src="{{url_for('static', filename='js/grid.js')}}"></script>
+    <script src="{{url_for('static', filename='js/list.js')}}"></script>
+    <script src="{{url_for('static', filename='js/carousel.js')}}"></script>
     <script src="{{url_for('static', filename='js/gallery.js')}}"></script>
 
-    <!-- Gallery mode selction modal -->
+    <!-- Gallery mode selection modal -->
     <div id="gallery_mode_modal"
         class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
         <div class="h-auto w-10/12 mx-auto justify-center items-center p-1">
@@ -32,16 +34,41 @@
                     <p class="text-lg text-gray-400">Select a display mode to view the gallery</p>
                 </div>
 
-                <!-- Grid mode option -->
+                <!--Option container (Max 3 Option per container )-->
                 <div class="flex flex-row justify-center items-center mt-4 w-full">
-                    <button id="grid_mode_option"
-                        onclick="switch_modal('gallery_mode_modal', 'grid_customization_modal');make_grid()"
-                        class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                        Grid
-                        <i class="fas fa-th-large ml-2"></i>
-                    </button>
-                </div>
+                    <!-- Grid mode option -->
+                    <div class="flex flex-row justify-center items-center mt-4 w-full">
+                        <button id="grid_mode_option"
+                            onclick="switch_modal('gallery_mode_modal', 'grid_customization_modal');make_grid()"
+                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                            Grid
+                            <i class="fas fa-th-large ml-2"></i>
+                        </button>
+                    </div>
 
+
+                    <!-- List mode option -->
+                    <div class="flex flex-row justify-center items-center mt-4 w-full">
+                        <button id="list_mode_option"
+                            onclick="switch_modal('gallery_mode_modal', 'list_customization_modal');make_list()"
+                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                            List
+                            <i class="fas fa-list ml-2"></i>
+                        </button>
+                    </div>
+
+                    <!-- Carousel mode option -->
+                    <div class="flex flex-row justify-center items-center mt-4 w-full">
+                        <button id="carousel_mode_option"
+                            onclick="switch_modal('gallery_mode_modal', 'carousel_customization_modal');make_carousel()"
+                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                            Carousel
+                            <i class="fas fa-images ml-2"></i>
+                        </button>
+                    </div>
+
+
+                </div>
             </div>
         </div>
     </div>
@@ -66,11 +93,7 @@
                     </div>
                 </div>
 
-                <!-- Preview grid (is filled by js) -->
-                <div id="grid_preview" class="grid grid-cols-4 gap-1 w-full h-64 overflow-y-scroll">
-                </div>
-
-                <!-- Apply button sectoin -->
+                <!-- Apply button  -->
                 <div class="flex flex-row justify-center items-center mt-4 w-full">
                     <button id="grid_apply_button"
                         onclick="close_modal('grid_customization_modal'); show_gallery('grid');"
@@ -79,18 +102,104 @@
                         <i class="fas fa-th-large ml-2"></i>
                     </button>
                 </div>
+
+                <!-- Preview grid (is filled by js) -->
+                <div id="grid_preview" class="grid grid-cols-4 gap-1 w-full h-64 overflow-y-scroll">
+                </div>
+                
             </div>
         </div>
     </div>
 
 
+    <!-- List customization moadal -->
+    <div id="list_customization_modal"
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        <div class="h-[80%] min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
+            <div class="h-full bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full overflow-y-auto">
+
+                <!-- Option customization (height) -->
+                <div class="flex flex-col justify-center items-center">
+                    <h2 class="text-2xl font-bold text-white m-1">Customize List</h2>
+                    <p class="text-lg text-gray-400">Select images height in <italic>em</italic>s</p>
+                </div>
+
+                <div class="flex flex-row justify-center items-center mt-4 w-full">
+                    <div class="flex flex-row justify-center items-center">
+                        <label for="list_image_height" class="text-white">Height: </label>
+                        <input id="list_image_height" type="number" min="20" max="200" value="100" step="5"
+                            onclick="make_list()"
+                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-1  max-w-md">
+                    </div>
+                </div>
+
+                <!-- Apply button -->
+                <div class="flex flex-row justify-center items-center my-3 w-full">
+                    <button id="list_apply_button"
+                        onclick="close_modal('list_customization_modal'); show_gallery('list');"
+                        class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                        Apply
+                        <i class="fas fa-list ml-2"></i>
+                    </button>
+                </div>
+
+                <!-- Preview list (is filled by js) -->
+                <div class="container mt-2">
+                    <div id="list_preview" class="flex flex-col justify-center items-center  w-10/12 h-full mx-auto">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Carousel customization modal -->
+    <div id="carousel_customization_modal"
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        <div class="h-[80%] min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
+            <div class="h-full bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full overflow-y-auto">
+
+                <!-- Option customization (height) -->
+                <div class="flex flex-col justify-center items-center">
+                    <h2 class="text-2xl font-bold text-white m-1">Customize Carousel</h2>
+                    <p class="text-lg text-gray-400">Select images height in <italic>em</italic>s</p>
+                </div>
+
+                <div class="flex flex-row justify-center items-center mt-4 w-full">
+                    <div class="flex flex-row justify-center items-center">
+                        <label for="carousel_image_height" class="text-white">Height: </label>
+                        <input id="carousel_image_height" type="number" min="20" max="200" value="100" step="5"
+                            onclick="make_carousel()"
+                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-1  max-w-md">
+                    </div>
+                </div>
+
+                <!-- Apply button -->
+                <div class="flex flex-row justify-center items-center my-3 w-full">
+                    <button id="carousel_apply_button"
+                        onclick="close_modal('carousel_customization_modal'); show_gallery('carousel');"
+                        class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                        Apply
+                        <i class="fas fa-images ml-2"></i>
+                    </button>
+                </div>
+
+                <!-- Preview carousel (is filled by js) -->
+                <div id="carousel_preview" class="container relative mt-2 w-full flex flex-col justify-center items-center">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <!-- Gallery Display -->
     <div id="main_container" class="w-full h-full">
         <!-- Nav -->
-        <nav class="flex flex-row justify-between items-center bg-black p-2 mt-2 mb-4 mx-2 border-b border-blue-50">
+        <nav class="flex flex-row justify-between items-center p-2 mt-2 mb-4 mx-2">
             <!-- Go home -->
             <div class="flex flex-row justify-center items-center">
-                <a href="/">
+                <a href="/" class="outline-none">
                     <i class="fas fa-home text-white text-2xl font-bold mx-2"></i>
                 </a>
             </div>
@@ -103,8 +212,7 @@
 
             <!-- Open config -->
             <div class="flex flex-row justify-center items-center">
-                <button onclick="open_modal('gallery_mode_modal')"
-                    class="text-white text-2xl font-bold mx-2">
+                <button onclick="open_modal('gallery_mode_modal')" class="text-white text-2xl font-bold mx-2">
                     <i class="fas fa-cog"></i>
                 </button>
             </div>
@@ -118,9 +226,9 @@
     <div id="image_modal" class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
         <div class="h-[92%] w-auto mx-auto">
             <img id="modal_image" class="rounded-lg max-h-full h-fit w-fit" alt="modal-image" src="" />
-            <!-- Text for image name (should be on top center)-->
+            <!-- Text for image name -->
             <div class="absolute top-0 left-0 right-0 flex justify-center items-center z-10">
-                <p id="modal_image_name" class="text-white text-1xl"></p>
+                <p id="modal_image_name" class="text-white text-1xl mx-2 overflow-ellipsis"></p>
             </div>
 
         </div>
