--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -25,7 +25,7 @@
 
     <!-- Gallery mode selection modal -->
     <div id="gallery_mode_modal"
-        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-auto w-10/12 mx-auto justify-center items-center p-1">
             <div class="bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full">
 
@@ -76,7 +76,7 @@
 
     <!-- Grid customization modal -->
     <div id="grid_customization_modal"
-        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]" >
         <div class="h-auto min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
             <div class="bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full">
 
@@ -94,7 +94,7 @@
                 </div>
 
                 <!-- Apply button  -->
-                <div class="flex flex-row justify-center items-center mt-4 w-full">
+                <div class="flex flex-row justify-center items-center my-4 w-full">
                     <button id="grid_apply_button"
                         onclick="close_modal('grid_customization_modal'); show_gallery('grid');"
                         class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
@@ -106,7 +106,7 @@
                 <!-- Preview grid (is filled by js) -->
                 <div id="grid_preview" class="grid grid-cols-4 gap-1 w-full h-64 overflow-y-scroll">
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -114,7 +114,7 @@
 
     <!-- List customization moadal -->
     <div id="list_customization_modal"
-        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-[80%] min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
             <div class="h-full bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full overflow-y-auto">
 
@@ -156,23 +156,14 @@
 
     <!-- Carousel customization modal -->
     <div id="carousel_customization_modal"
-        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-[80%] min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
             <div class="h-full bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full overflow-y-auto">
 
                 <!-- Option customization (height) -->
                 <div class="flex flex-col justify-center items-center">
                     <h2 class="text-2xl font-bold text-white m-1">Customize Carousel</h2>
-                    <p class="text-lg text-gray-400">Select images height in <italic>em</italic>s</p>
-                </div>
-
-                <div class="flex flex-row justify-center items-center mt-4 w-full">
-                    <div class="flex flex-row justify-center items-center">
-                        <label for="carousel_image_height" class="text-white">Height: </label>
-                        <input id="carousel_image_height" type="number" min="20" max="200" value="100" step="5"
-                            onclick="make_carousel()"
-                            class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-1  max-w-md">
-                    </div>
+                    <p class="text-lg text-gray-400">Nothing to change... yet</p>
                 </div>
 
                 <!-- Apply button -->
@@ -186,7 +177,7 @@
                 </div>
 
                 <!-- Preview carousel (is filled by js) -->
-                <div id="carousel_preview" class="container relative mt-2 w-full flex flex-col justify-center items-center">
+                <div id="carousel_preview" class="container mt-2 w-full flex flex-col justify-center items-center">
                 </div>
 
             </div>
@@ -223,7 +214,7 @@
     </div>
 
     <!-- Focused image modal -->
-    <div id="image_modal" class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center">
+    <div id="image_modal" class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-[92%] w-auto mx-auto">
             <img id="modal_image" class="rounded-lg max-h-full h-fit w-fit" alt="modal-image" src="" />
             <!-- Text for image name -->
