--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -23,6 +23,30 @@
     <script src="{{url_for('static', filename='js/carousel.js')}}"></script>
     <script src="{{url_for('static', filename='js/gallery.js')}}"></script>
 
+
+    <!-- Under development modal -->
+    <div id="indev_modal"
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[10]">
+        <div class="h-auto w-10/12 mx-auto justify-center items-center p-1">
+            <div class="bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full">
+
+                <div class="flex flex-col justify-center items-center">
+                    <h2 class="text-2xl font-bold text-white m-1">Under development</h2>
+                    <p class="text-lg text-gray-400">This feature is under development</p>
+                </div>
+
+                <!-- Grid mode option -->
+                <div class="flex flex-row justify-center items-center mt-4 w-full">
+                    <button id="grid_mode_option" onclick="close_modal('indev_modal')"
+                        class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
+                        <i class="fas fa-times ml-2"></i>
+                        Close
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Gallery mode selection modal -->
     <div id="gallery_mode_modal"
         class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
@@ -41,8 +65,8 @@
                         <button id="grid_mode_option"
                             onclick="switch_modal('gallery_mode_modal', 'grid_customization_modal');make_grid()"
                             class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                            Grid
                             <i class="fas fa-th-large ml-2"></i>
+                            Grid
                         </button>
                     </div>
 
@@ -52,18 +76,17 @@
                         <button id="list_mode_option"
                             onclick="switch_modal('gallery_mode_modal', 'list_customization_modal');make_list()"
                             class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                            List
                             <i class="fas fa-list ml-2"></i>
+                            List
                         </button>
                     </div>
 
                     <!-- Carousel mode option -->
                     <div class="flex flex-row justify-center items-center mt-4 w-full">
-                        <button id="carousel_mode_option"
-                            onclick="switch_modal('gallery_mode_modal', 'carousel_customization_modal');make_carousel()"
+                        <button id="carousel_mode_option" onclick="open_modal('indev_modal');"
                             class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                            Carousel
                             <i class="fas fa-images ml-2"></i>
+                            Carousel
                         </button>
                     </div>
 
@@ -76,7 +99,7 @@
 
     <!-- Grid customization modal -->
     <div id="grid_customization_modal"
-        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]" >
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-auto min-h-[40%] w-10/12 mx-auto justify-center items-center p-1">
             <div class="bg-gray-800 rounded-lg shadow-lg px-4 py-8 w-full">
 
@@ -98,8 +121,8 @@
                     <button id="grid_apply_button"
                         onclick="close_modal('grid_customization_modal'); show_gallery('grid');"
                         class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                        Apply
                         <i class="fas fa-th-large ml-2"></i>
+                        Apply
                     </button>
                 </div>
 
@@ -138,8 +161,8 @@
                     <button id="list_apply_button"
                         onclick="close_modal('list_customization_modal'); show_gallery('list');"
                         class="rounded-lg shadow-md bg-gray-800 text-white mt-3 mx-2 py-5 px-2  max-w-md">
-                        Apply
                         <i class="fas fa-list ml-2"></i>
+                        Apply
                     </button>
                 </div>
 
@@ -214,7 +237,8 @@
     </div>
 
     <!-- Focused image modal -->
-    <div id="image_modal" class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
+    <div id="image_modal"
+        class="hidden fixed inset-0 p-2 bg-black bg-opacity-50 flex items-center justify-center z-[5]">
         <div class="h-[92%] w-auto mx-auto">
             <img id="modal_image" class="rounded-lg max-h-full h-fit w-fit" alt="modal-image" src="" />
             <!-- Text for image name -->
